src/test/06-Errors/error-public-class-ext-var1.txt
error-public-class-ext-var1.ck:21:13: error: cannot access local variable 'foo' from within a public class
[21]         <<< foo + 5 >>>;
                 ^
error-public-class-ext-var1.ck: ...in function 'void X.go()'
